# nova

./: .editorconfig  .env.example  .flake8  .gitignore  .isort.cfg  .mypy.ini  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_nova.py  run_server.py  setup.py  tasks.json  test_browser_automation.py  test_playwright.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: .env.example
db/chroma_db/: chroma.sqlite3
docs/: CHANGELOG.md  README.md  conf.py  contributing.rst  index.rst  installation.rst  usage.rst
docs/api/: api_reference.rst  index.rst
docs/architecture/: README.md  index.rst
docs/deployment/: contributing.rst  index.rst  setup.rst
docs/user-guides/: basic_usage.rst  index.rst  memory_management.rst  tool_system.rst
examples/: advanced_features_test.py  agent_example.py  basic_usage.py  browser_example.py  hybrid_automation.py  llama_example.py  tool_chain_test.py  tool_system_test.py  vision_example.py
examples/advanced/: advanced_features_test.py  agent_example.py  enhanced_browser_automation.py  hybrid_automation.py  tool_chain_test.py  tool_system_test.py
examples/basic/: agent_example.py  basic_usage.py  browser_automation.py  browser_example.py  llama_example.py  vision_example.py
examples/templates/: README.md  agent_config_template.yaml  agent_template.py  tool_template.py
nova/: __init__.py
nova/agent/: agent.py
nova/browser/: __init__.py  browser.py
nova/cli/: cli.py  commands.py
nova/core/: agent.py  browser.py  language_model.py  llama.py  llm.py  memory.py  monitoring.py  tools.py  vision.py
nova/tools/: __init__.py
nova/tools/api/: example_tool.py
nova/tools/base/: __init__.py  tool.py
nova/tools/utils/: config.py  loader.py  user_tools.py
nova/types/: state.py
nova/web/: __init__.py  api.py  server.py  test_api.py
nova/web/templates/: base.html  builder.html  settings.html  tasks.html
src/: tasks.json
src/nova/: __init__.py
src/nova/agent/: agent.py
src/nova/agents/: __init__.py
src/nova/agents/base/: base_agent.py
src/nova/agents/plan_execute/: config.py  plan_execute_agent.py
src/nova/agents/react/: config.py  react_agent.py
src/nova/agents/specialized/: agent.py
src/nova/agents/task/: config.py  task_agent.py
src/nova/api/: tasks.py
src/nova/browser/: __init__.py  config.py
src/nova/cli/: __init__.py  cli.py  commands.py  main.py
src/nova/core/: agent.py  agents.py  browser.py  config.py  exceptions.py  language_model.py  llama.py  llm.py  memory.py  nim_provider.py  task.py  task_analyzer.py  tools.py  vision.py
src/nova/core/agent/: langchain_agent.py
src/nova/core/browser/: __init__.py  browser.py  tools.py
src/nova/core/config/: __init__.py  config.py
src/nova/core/exceptions/: __init__.py  exceptions.py
src/nova/core/llm/: __init__.py  llm.py  prompts.py  schemas.py
src/nova/core/llm/providers/: llama.py
src/nova/core/memory/: memory.py
src/nova/core/monitoring/: config.py  monitor.py  monitoring.py
src/nova/core/task/: task.py
src/nova/core/tools/: __init__.py  registry.py  tool.py  tools.py
src/nova/core/vision/: vision.py
src/nova/core/workflow/: workflow.py
src/nova/langchain/: config.py  core.py
src/nova/learning/: interaction_logger.py  log_processor.py
src/nova/server/: api.py  main.py
src/nova/server/static/: index.html  script.js  style.css
src/nova/tools/: __init__.py  browser.py
src/nova/tools/api/: __init__.py  example_tool.py
src/nova/tools/base/: __init__.py  registry.py  tool.py
src/nova/tools/browser/: __init__.py  browser.py  browser_tools.py  langchain_tools.py
src/nova/tools/utils/: __init__.py  chain.py  loader.py  metrics.py  user_tools.py  web_search.py
src/nova/types/: actions.py  state.py
src/nova/web/: api.py  monitoring.py  server.py  test_api.py
src/nova/web/templates/: builder.html  index.html  new_task.html  settings.html  tasks.html
src/scripts/: amadeus_search.py  install_playwright.py  list_gemini_models.py  list_nvidia_models.py  scraper.py
tests/: conftest.py
tests/agent/: test_agent.py  test_agent_integration.py  test_agent_logging.py
tests/browser/: test_browser.py  test_browser_automation.py
tests/core/: mock_browser.py  mock_llm.py  mock_memory.py  mock_monitor.py  test_agent.py  test_agent_workflow.py  test_llama.py  test_llm.py  test_memory.py  test_model.py  test_nim_provider.py  test_ollama.py
tests/e2e/: test_agent_workflow.py
tests/integration/: __init__.py  test_agent_logging.py  test_memory_llm_integration.py
tests/tools/: test_browser_tools.py  test_loader.py  test_registry.py  test_tools.py
tests/unit/learning/: test_interaction_logger.py
tools/: requirements-dev.txt
tools/lint/: .isort.cfg  .mypy.ini
